Git Tests/force-app/main/default/default/objects/OpportunityLineItem/OpportunityLineItem.object-meta.xml
<CustomObject>
</CustomObject>