Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/BloqueadoRegionalizacao__c.field-meta.xml
<CustomField>
    <fullName>BloqueadoRegionalizacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bloqueado por regionalização?</label>
    <type>Checkbox</type>
</CustomField>