Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/CampanhaShelfLife__c.field-meta.xml
<CustomField>
    <fullName>CampanhaShelfLife__c</fullName>
    <defaultValue>false</defaultValue>
    <label>É de campanha Shelf Life?</label>
    <type>Checkbox</type>
</CustomField>