Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/CategoriaComercial__c.field-meta.xml
<CustomField>
    <fullName>CategoriaComercial__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.CategoriaComercial__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Categoria comercial</label>
    <type>Text</type>
</CustomField>