Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/CodigoItem__c.field-meta.xml
<CustomField>
    <fullName>CodigoItem__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Código do item</label>
    <type>AutoNumber</type>
</CustomField>