Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/CodigoRastreio__c.field-meta.xml
<CustomField>
    <fullName>CodigoRastreio__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Código de Rastreio</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>