Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <label>Comentários</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>