Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/Custo__c.field-meta.xml
<CustomField>
    <fullName>Custo__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Custo</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>