Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/DataPedidoGanho__c.field-meta.xml
<CustomField>
    <fullName>DataPedidoGanho__c</fullName>
    <label>Data de validade</label>
    <type>Date</type>
</CustomField>