Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/DataPedidoPerdido__c.field-meta.xml
<CustomField>
    <fullName>DataPedidoPerdido__c</fullName>
    <label>Data de validade</label>
    <type>Date</type>
</CustomField>