Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/EANProduto__c.field-meta.xml
<CustomField>
    <fullName>EANProduto__c</fullName>
    <formula>PricebookEntry.Product2.EANProduto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EAN do produto</label>
    <type>Text</type>
</CustomField>