Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Chave Externa</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>