Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/FatorConversao__c.field-meta.xml
<CustomField>
    <fullName>FatorConversao__c</fullName>
    <label>Fator de Conversao</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>