Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/ForaMalha__c.field-meta.xml
<CustomField>
    <fullName>ForaMalha__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fora de malha?</label>
    <type>Checkbox</type>
</CustomField>