Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Fornecedor__c</fullName>
    <formula>PricebookEntry.Product2.Fornecedor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fornecedor</label>
    <type>Text</type>
</CustomField>