Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/IdArtigo__c.field-meta.xml
<CustomField>
    <fullName>IdArtigo__c</fullName>
    <externalId>true</externalId>
    <label>Id do Artigo</label>
    <length>32</length>
    <type>Text</type>
</CustomField>