Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/IdCustomer__c.field-meta.xml
<CustomField>
    <fullName>IdCustomer__c</fullName>
    <externalId>true</externalId>
    <label>Id do Cliente</label>
    <length>32</length>
    <type>Text</type>
</CustomField>