Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/IdPortal__c.field-meta.xml
<CustomField>
    <fullName>IdPortal__c</fullName>
    <description>Id do item no Portal de Cotações.</description>
    <externalId>true</externalId>
    <label>Id do Portal</label>
    <length>64</length>
    <type>Text</type>
</CustomField>