Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/JustificativaDesconto__c.field-meta.xml
<CustomField>
    <fullName>JustificativaDesconto__c</fullName>
    <label>Justificativa de desconto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>