Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/MargemAtual__c.field-meta.xml
<CustomField>
    <fullName>MargemAtual__c</fullName>
    <label>Margem Atual</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>