Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/MargemBUParametro__c.field-meta.xml
<CustomField>
    <fullName>MargemBUParametro__c</fullName>
    <label>Margem da BU (Parâmetro)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>