Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/MotivoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>MotivoCancelamento__c</fullName>
    <label>Motivo de cancelamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desistiu da compra</fullName>
            </value>
            <value>
                <fullName>Não tem mais interesse no produto</fullName>
            </value>
            <value>
                <fullName>Falta de estoque do produto</fullName>
            </value>
            <value>
                <fullName>Preço</fullName>
            </value>
            <value>
                <fullName>Aprovação interna fora do prazo</fullName>
            </value>
            <value>
                <fullName>Analise interna financeira</fullName>
            </value>
            <value>
                <fullName>Prazo de entrega</fullName>
            </value>
            <value>
                <fullName>Orçamento cancelado por falta de tratativa dentro do vencimento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>