Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/NumeroAnvisa__c.field-meta.xml
<CustomField>
    <fullName>NumeroAnvisa__c</fullName>
    <formula>PricebookEntry.Product2.NumeroAnvisa__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número da Anvisa</label>
    <type>Text</type>
</CustomField>