Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/ObservacaoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>ObservacaoCancelamento__c</fullName>
    <label>Observação do cancelamento</label>
    <type>TextArea</type>
</CustomField>