Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/ObservacoesComercial__c.field-meta.xml
<CustomField>
    <fullName>ObservacoesComercial__c</fullName>
    <label>Observação comercial</label>
    <type>TextArea</type>
</CustomField>