Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/PosicaoItem__c.field-meta.xml
<CustomField>
    <fullName>PosicaoItem__c</fullName>
    <label>Posição do item</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>