Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/PrecoPDF__c.field-meta.xml
<CustomField>
    <fullName>PrecoPDF__c</fullName>
    <label>Preço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>