Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/ProgramacaoEntrega__c.field-meta.xml
<CustomField>
    <fullName>ProgramacaoEntrega__c</fullName>
    <label>Programacao Entrega</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>