Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/QuantidadePortal__c.field-meta.xml
<CustomField>
    <fullName>QuantidadePortal__c</fullName>
    <inlineHelpText>Quantidade Portal</inlineHelpText>
    <label>Quantidade Portal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>