Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/Recomendacao__c.field-meta.xml
<CustomField>
    <fullName>Recomendacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>É recomendação?</label>
    <type>Checkbox</type>
</CustomField>