Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/ScoreAtual__c.field-meta.xml
<CustomField>
    <fullName>ScoreAtual__c</fullName>
    <label>Score Atual</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>