Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/Scoreitem__c.field-meta.xml
<CustomField>
    <fullName>Scoreitem__c</fullName>
    <label>Score do item</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>