Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/ScoreNegociacao__c.field-meta.xml
<CustomField>
    <fullName>ScoreNegociacao__c</fullName>
    <label>Score Negociação</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>