Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NÃO IDENTIFICADO</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>IDENTIFICADO</fullName>
            </value>
            <value>
                <fullName>QUALIFICADO</fullName>
            </value>
            <value>
                <fullName>Respondido</fullName>
            </value>
            <value>
                <fullName>Resgatado</fullName>
            </value>
            <value>
                <fullName>Aguardando Integração</fullName>
            </value>
            <value>
                <fullName>Falha na Integração</fullName>
            </value>
            <value>
                <fullName>Não Vinculado</fullName>
            </value>
            <value>
                <fullName>Vinculado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>