Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/TabulacaoN1__c.field-meta.xml
<CustomField>
    <fullName>TabulacaoN1__c</fullName>
    <inlineHelpText>Refinamento do valor do campo Status.</inlineHelpText>
    <label>Tabulação N1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FORA DE MALHA</fullName>
                <label>Fora de malha</label>
            </value>
            <value>
                <fullName>SEM ESTOQUE</fullName>
                <label>Sem estoque</label>
            </value>
            <value>
                <fullName>NÃO TEMOS NESSA APRESENTAÇÃO</fullName>
                <label>Não temos nessa apresentação</label>
            </value>
            <value>
                <fullName>NÃO TEMOS A VALIDADE SOLICITADA</fullName>
                <label>Não temos a validade solicitada</label>
            </value>
            <value>
                <fullName>Não temos a quantidade solicitada</fullName>
            </value>
            <value>
                <fullName>Bloqueio por regionalização</fullName>
            </value>
            <value>
                <fullName>Termolab alto SLA de entrega</fullName>
            </value>
            <value>
                <fullName>Não pertence a minha BU</fullName>
            </value>
            <value>
                <fullName>Cotado</fullName>
            </value>
            <value>
                <fullName>NÃO TEM NO PORTIFÓLIO</fullName>
                <label>Não tem no portifólio</label>
            </value>
            <value>
                <fullName>COM OFERTA</fullName>
                <isActive>false</isActive>
                <label>Com oferta</label>
            </value>
            <value>
                <fullName>NÃO TEMOS A QTDE SOLICITADA</fullName>
                <isActive>false</isActive>
                <label>NÃO TEMOS A QTDE SOLICITADA</label>
            </value>
            <value>
                <fullName>NÃO TRABALHAMOS</fullName>
                <isActive>false</isActive>
                <label>NÃO TRABALHAMOS</label>
            </value>
            <value>
                <fullName>NÃO CONSEGUIMOS ATENDER NO PRAZO SOLICITADO</fullName>
                <isActive>false</isActive>
                <label>Não conseguimos atender no prazo solicitado</label>
            </value>
            <value>
                <fullName>SEM OFERTA</fullName>
                <isActive>false</isActive>
                <label>Sem oferta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>