Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/Temperatura__c.field-meta.xml
<CustomField>
    <fullName>Temperatura__c</fullName>
    <formula>PricebookEntry.Product2.Temperatura__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temperatura</label>
    <type>Text</type>
</CustomField>