Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/UnidadeMedidaPDF__c.field-meta.xml
<CustomField>
    <fullName>UnidadeMedidaPDF__c</fullName>
    <label>Unidade de medida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>