Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/ValidadeMinima__c.field-meta.xml
<CustomField>
    <fullName>ValidadeMinima__c</fullName>
    <label>Validade mínima</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>168</fullName>
                <label>7 dias</label>
            </value>
            <value>
                <fullName>720</fullName>
                <label>30 dias</label>
            </value>
            <value>
                <fullName>1440</fullName>
                <label>60 dias</label>
            </value>
            <value>
                <fullName>2160</fullName>
                <label>90 dias</label>
            </value>
            <value>
                <fullName>4320</fullName>
                <label>180 dias</label>
            </value>
            <value>
                <fullName>8760</fullName>
                <label>1 ano</label>
            </value>
            <value>
                <fullName>13140</fullName>
                <label>18 meses</label>
            </value>
            <value>
                <fullName>17520</fullName>
                <label>24 meses</label>
            </value>
            <value>
                <fullName>Entre 3 a 6 meses</fullName>
                <isActive>false</isActive>
                <label>Entre 3 a 6 meses</label>
            </value>
            <value>
                <fullName>Entre 6 a 12 meses</fullName>
                <isActive>false</isActive>
                <label>Entre 6 a 12 meses</label>
            </value>
            <value>
                <fullName>Maior que 12 meses</fullName>
                <isActive>false</isActive>
                <label>Maior que 12 meses</label>
            </value>
            <value>
                <fullName>Menor que 3 meses</fullName>
                <isActive>false</isActive>
                <label>Menor que 3 meses</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>