Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/ValorPedidoGanho__c.field-meta.xml
<CustomField>
    <fullName>ValorPedidoGanho__c</fullName>
    <label>Valor pedido ganho</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>