Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/ValorPedidoPerdido__c.field-meta.xml
<CustomField>
    <fullName>ValorPedidoPerdido__c</fullName>
    <label>Valor pedido perdido</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>