Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/ValorPortal__c.field-meta.xml
<CustomField>
    <fullName>ValorPortal__c</fullName>
    <inlineHelpText>Valor Portal</inlineHelpText>
    <label>Valor Portal</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>