Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/ValorTotalPDF__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalPDF__c</fullName>
    <label>Valor Total PDF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>