Git Tests/force-app/main/default/default/objects/OpportunityLineItem/fields/ValorUn__c.field-meta.xml
<CustomField>
    <fullName>ValorUn__c</fullName>
    <inlineHelpText>Secundário: Segunda unidade de medida do produto</inlineHelpText>
    <label>Valor (Secundário)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>